sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {


var i : Int = 0
for(i <- getNombreValeurs() to 1 ) 
if(getValeurs(i) < getValeurs(i+1))
echange(getValeurs(i),  getValeurs(i+1))


}
